syntax = "proto3";

package mapreduce;

// The message to request task processing with details for either a range of data or a list of data points.
message ProcessTaskRequest {
    int32 task_id = 1;
    repeated double centroids = 2;  // Flattened list of centroid coordinates (x1, y1, x2, y2, ...)
    int32 start_index = 3;          // Used for index-based data division
    int32 end_index = 4;            // Used for index-based data division
    repeated string filenames = 5;  // Used for file-based data division
    repeated double data_points = 6;  // Flattened list of data points (optional, depends on scenario)
}

// The message to respond to a task processing request.
message ProcessTaskResponse {
    bool success = 1;                 // Indicates if the processing was successful
    repeated double new_centroids = 2; // Flattened list of updated centroids
    string message = 3;               // Optional message (e.g., error messages)
}

// The gRPC service definitions for MapReduce operations.
service MapReduceService {
    // RPC to process a mapping task.
    rpc ProcessMapTask (ProcessTaskRequest) returns (ProcessTaskResponse) {}

    // RPC to process a reducing task.
    rpc ProcessReduceTask (ProcessTaskRequest) returns (ProcessTaskResponse) {}
}
